--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Application
 web/app/plugins/*
 !web/app/plugins/.gitkeep
+!web/app/plugins/real-estate-cpt
 web/app/mu-plugins/*/
 web/app/themes/twentytwentyfive/
 web/app/upgrade
@@ -26,3 +27,9 @@ auth.json
 
 # WP-CLI
 wp-cli.local.yml
+
+# DB
+*.sql
+
+# Other
+.DS_Store
